@@ -1,8 +1,9 @@
 package kitchen.order.merchname;
+import java.util.Collections;
 import java.util.List;
 //单品馒头
 public class SteamedBread implements MerchName {
-    public final static List<String> names=List.of("馒头");
+    public final static List<String> names= Collections.singletonList("馒头");
     // public  List<MerchName> merchs;
 
     // public SteamedBread() {
