@@ -1,8 +1,10 @@
 package kitchen.order.merchname;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 //单品炒青菜
 public class StirFriedVegetables implements MerchName {
-    public final static List<String> names=List.of("炒青菜");
+    public final static List<String> names= Collections.singletonList("炒青菜");
     // public List<MerchName> merchs;
 
     // public StirFriedVegetables() {
